[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools. build_meta"

[project]
name = "gpu-matrix-service"
version = "1.0.0"
description = "GPU-accelerated matrix addition microservice using Numba CUDA"
authors = [{name = "HattourWejden"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.21.0",
    "numba>=0.57.0",
    "scipy>=1.7.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]